--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,7 +18,7 @@ header {
       padding: 0 15px;
       
       a {
-        font-size: 12px;
+        font-size: 13px;
         font-weight: 300;
         color: #bba36a;
 
@@ -55,7 +55,7 @@ header {
 }
 
 .text_lil_monts {
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.5;
 }
 
@@ -67,7 +67,7 @@ header {
   }
 }
 #main_content_2 {
-  padding-top: 50px;
+  padding-top: 70px;
 
   h1 {
     font-size: 2em;
@@ -77,16 +77,47 @@ header {
   }
 }
 #main_content_3 {
-  padding-top: 50px;
+  padding-top: 70px;
 
   .ritz_caption {
-    padding: 35px;
+    margin-top: -115px;
+    margin-right: 30px;
+    padding: 70px 50px;
     background-color: #bba36a;
 
     span {
-      margin: 10px 0;
       color: #fff;
     }
   }
 
+}
+#main_content_4 {
+  padding-bottom: 70px;
+
+  .m_t {
+    margin-top: -140px;
+  }
+  span {
+    color: #575657;
+  }
+}
+footer {
+  background-color: #464646;
+  padding: 50px 0;
+
+  a {
+    margin-right: 15px;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+  a.footer_link_contacts {
+    color: #bba36a;
+
+    &:hover {
+      color: #8F7A4A;
+      text-decoration: none;
+    }
+  }
 }
