--- a/css/styles.css
+++ b/css/styles.css
@@ -91,4 +91,111 @@ footer {
       color: #8F7A4A;
       text-decoration: none; }
 
+#rc_bg .rc_bg_text {
+  position: absolute;
+  bottom: 5%;
+  left: 0;
+  width: 100%; }
+  #rc_bg .rc_bg_text h1 {
+    font-size: 2em;
+    text-align: center;
+    color: #bba36a;
+    text-transform: uppercase; }
+
+#rc_content_1 {
+  padding: 60px 0; }
+  #rc_content_1 .caption {
+    padding: 50px 40px;
+    background-color: #bba36a; }
+    #rc_content_1 .caption p {
+      color: #fff; }
+
+#rc_content_4 .ritz_caption {
+  margin-top: -90px;
+  margin-right: 30px;
+  padding: 40px 30px;
+  background-color: #000000; }
+  #rc_content_4 .ritz_caption p {
+    color: #fff; }
+#rc_content_4 a {
+  text-decoration: underline;
+  color: #bba36a;
+  font-size: 1.75em; }
+
+#rcr_content_1 {
+  padding: 50px 0;
+  text-align: center; }
+  #rcr_content_1 .block_content {
+    padding: 25px 40px;
+    background-color: #000000; }
+    #rcr_content_1 .block_content .block_text {
+      margin: 20px 0; }
+      #rcr_content_1 .block_content .block_text p {
+        color: #fff !important; }
+  #rcr_content_1 a {
+    text-decoration: underline;
+    color: #bba36a;
+    font-size: 1.75em; }
+
+#emporium_content_2 {
+  padding: 50px 0; }
+  #emporium_content_2 .block_content {
+    padding: 25px 40px;
+    background-color: #000000; }
+    #emporium_content_2 .block_content .block_title {
+      font-size: 2.2em;
+      color: #bba36a;
+      text-transform: uppercase; }
+    #emporium_content_2 .block_content .block_text {
+      margin: 20px 0; }
+      #emporium_content_2 .block_content .block_text p {
+        color: #fff; }
+
+#rc_mokki_block {
+  padding: 50px 0; }
+
+.mokki_block {
+  padding: 25px 40px !important;
+  background-color: #000000; }
+  .mokki_block .mokki_title {
+    font-size: 2em;
+    text-transform: uppercase;
+    color: #bba36a; }
+  .mokki_block .mokki_text {
+    margin: 20px 0; }
+    .mokki_block .mokki_text p {
+      color: #fff !important; }
+
+#rc_ozen_block {
+  padding: 50px 0; }
+  #rc_ozen_block .ozen_block {
+    padding: 25px 40px;
+    background-color: #bba36a;
+    color: #fff; }
+    #rc_ozen_block .ozen_block .ozen_title {
+      font-size: 2em;
+      text-transform: uppercase; }
+    #rc_ozen_block .ozen_block .ozen_text {
+      margin: 20px 0;
+      line-height: 1.8; }
+
+#rc_selfie_block {
+  padding: 50px 0; }
+  #rc_selfie_block .selfie_block {
+    padding: 25px 40px; }
+    #rc_selfie_block .selfie_block .selfie_title {
+      color: #bba36a;
+      font-size: 2em;
+      text-transform: uppercase; }
+    #rc_selfie_block .selfie_block .selfie_text {
+      color: #000000;
+      margin: 20px 0;
+      line-height: 1.8; }
+      #rc_selfie_block .selfie_block .selfie_text a {
+        text-decoration: underline;
+        color: #000000; }
+
+#rc_starbucks_block {
+  padding: 50px 0; }
+
 /*# sourceMappingURL=styles.css.map */
