--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,34 @@
-.light-yellow {
-  color: #bba36a; }
+.bg_gold {
+  background-color: #bba36a !important; }
 
-.dark-grey {
-  color: #4a4a4a; }
+.text_gold {
+  color: #bba36a !important; }
+
+.bg_grey {
+  background-color: #4a4a4a !important; }
+
+.text_grey {
+  color: #4a4a4a !important; }
+
+.bg_black {
+  background-color: #000000 !important; }
+
+.text_black {
+  color: #000000 !important; }
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url("../fonts/montserrat/Montserrat-Light.eot");
+  src: local("Montserrat Light"), local("Montserrat-Light"), url("../fonts/montserrat/Montserrat-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/Montserrat-Light.woff") format("woff"), url("../fonts/montserrat/Montserrat-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal; }
+@font-face {
+  font-family: 'RaleighLtBt';
+  src: url("../fonts/raleigh/RaleighC Lt Bt.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal; }
+body {
+  font-family: Montserrat, sans-serif; }
 
 header {
   position: absolute;
@@ -11,26 +37,93 @@ header {
   width: 100%;
   background-color: transparent; }
   header .d_t_h {
-    height: 180px; }
-  header ul {
+    height: 140px; }
+  header ul.desktop_menu {
     list-style-type: none;
     margin: 0;
     padding-left: 0; }
-    header ul li {
+    header ul.desktop_menu li {
       display: inline-block;
       padding: 0 15px; }
-      header ul li a {
+      header ul.desktop_menu li a {
         font-size: 13px;
         font-weight: 300;
         color: #bba36a; }
-        header ul li a:hover {
+        header ul.desktop_menu li a:hover {
           color: #8F7A4A;
           text-decoration: none; }
+      header ul.desktop_menu li .dropdown_content {
+        display: none;
+        position: absolute;
+        min-width: 160px;
+        padding-top: 5px;
+        z-index: 1; }
+        header ul.desktop_menu li .dropdown_content a {
+          display: block; }
+    header ul.desktop_menu li.dropdown:hover .dropdown_content {
+      display: block; }
+    header ul.desktop_menu li.dropdown:hover .dropBtn {
+      color: #8F7A4A; }
+  header ul.lang_items {
+    text-transform: uppercase; }
+    header ul.lang_items li {
+      display: block;
+      padding: 0; }
+  header .mobile_menu {
+    position: relative; }
+    header .mobile_menu a#dropdownMenuLink {
+      float: right;
+      color: #bba36a; }
+      header .mobile_menu a#dropdownMenuLink:hover {
+        color: #bba36a; }
+  header .mobile_dropdown_menu {
+    display: none;
+    position: absolute;
+    top: 63px;
+    left: 0;
+    z-index: 100;
+    font-size: 13px;
+    min-width: 300px;
+    background-color: #bba36a;
+    border-radius: 0; }
+    header .mobile_dropdown_menu .mobile_menu_item {
+      padding: 0.75rem 1.5rem;
+      display: block;
+      width: 100%;
+      clear: both;
+      color: #fff;
+      text-align: inherit;
+      text-decoration: none;
+      white-space: nowrap;
+      border: 0;
+      cursor: pointer; }
+      header .mobile_dropdown_menu .mobile_menu_item i {
+        float: right; }
+    header .mobile_dropdown_menu .mobile_menu_item._activated i {
+      transform: rotateX(180deg); }
+    header .mobile_dropdown_menu .menu_item_inner {
+      display: none; }
+      header .mobile_dropdown_menu .menu_item_inner ul {
+        list-style-type: none;
+        margin-bottom: 0;
+        padding-left: 15px; }
+        header .mobile_dropdown_menu .menu_item_inner ul li a {
+          display: inline-block;
+          color: #fff;
+          text-decoration: none;
+          text-transform: capitalize;
+          width: 100%;
+          padding: 0.75rem 1.5rem; }
+    header .mobile_dropdown_menu .menu_item_inner._visible {
+      display: block; }
+  header .mobile_dropdown_menu._show {
+    display: block; }
 
 #main_bg .main_bg_text {
   position: absolute;
-  bottom: 40%;
-  left: 0;
+  bottom: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%; }
   #main_bg .main_bg_text h1 {
     font-size: 2em;
@@ -90,5 +183,34 @@ footer {
     footer a.footer_link_contacts:hover {
       color: #8F7A4A;
       text-decoration: none; }
+
+#offices_bg .offices_bg_text {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%; }
+  #offices_bg .offices_bg_text h1 {
+    font-size: 2em;
+    text-align: center;
+    width: 100%;
+    color: #bba36a;
+    text-transform: uppercase; }
+
+#offices_blocks {
+  padding: 50px 0; }
+  #offices_blocks .off_block_title {
+    font-size: 2.2em;
+    font-family: RaleighLtBt, sans-serif; }
+  #offices_blocks .block_content {
+    padding: 40px; }
+    #offices_blocks .block_content .off_block_text {
+      margin: 20px 0; }
+    #offices_blocks .block_content .off_block_action a {
+      text-decoration: underline; }
+    #offices_blocks .block_content .off_block_actionBtn a {
+      text-decoration: none !important;
+      padding: 5px 15px;
+      border: 1px solid; }
 
 /*# sourceMappingURL=styles.css.map */
