--- a/css/styles.css
+++ b/css/styles.css
@@ -181,32 +181,30 @@ header {
 
 #main_content_1 {
   padding-top: 50px; }
-  #main_content_1 span {
-    color: #575657; }
 
 #main_content_2 {
   padding-top: 70px; }
-  #main_content_2 h1 {
-    font-size: 2em;
-    text-align: center;
-    color: #575657; }
 
 #main_content_3 {
   padding-top: 70px; }
-  #main_content_3 .ritz_caption {
-    margin-top: -115px;
-    margin-right: 30px;
-    padding: 70px 50px;
-    background-color: #bba36a; }
-    #main_content_3 .ritz_caption span {
-      color: #fff; }
+  #main_content_3 .block_content {
+    padding: 40px; }
 
 #main_content_4 {
-  padding-bottom: 70px; }
-  #main_content_4 .m_t {
-    margin-top: -140px; }
-  #main_content_4 span {
-    color: #575657; }
+  padding-top: 70px; }
+  #main_content_4 .block_content {
+    padding: 40px;
+    margin-top: -115px; }
+
+#main_content_5 {
+  padding-top: 70px; }
+  #main_content_5 .block_content {
+    padding: 40px; }
+
+#main_content_6 {
+  padding: 70px 0; }
+  #main_content_6 .block_content {
+    padding: 40px; }
 
 footer {
   background-color: #464646;
