--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -249,43 +249,38 @@ header {
 
 #main_content_1 {
   padding-top: 50px;
-
-  span {
-    color: #575657;
-  }
 }
 #main_content_2 {
   padding-top: 70px;
-
-  h1 {
-    font-size: 2em;
-    text-align: center;
-    color: #575657;
-  }
 }
 #main_content_3 {
   padding-top: 70px;
 
-  .ritz_caption {
-    margin-top: -115px;
-    margin-right: 30px;
-    padding: 70px 50px;
-    background-color: #bba36a;
+  .block_content {
+    padding: 40px;
+  }
+}
+#main_content_4 {
+  padding-top: 70px;
 
-    span {
-      color: #fff;
-    }
+  .block_content {
+    padding: 40px;
+    margin-top: -115px;
   }
 
 }
-#main_content_4 {
-  padding-bottom: 70px;
+#main_content_5 {
+  padding-top: 70px;
 
-  .m_t {
-    margin-top: -140px;
+  .block_content {
+    padding: 40px;
   }
-  span {
-    color: #575657;
+}
+#main_content_6 {
+  padding: 70px 0;
+
+  .block_content {
+    padding: 40px;
   }
 }
 footer {
